fixed that wrong height calculated by fullpage.js fullpage.js calcuates wrong height when the page loaded because of the scrollbar, so set overflow to hidden to avoid it.

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -79,6 +79,7 @@ p{
 }
 .section{
 	text-align:center;
+    overflow: hidden;
 }
 #menu li {
 	display:inline-block;
